--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,8 @@
+body {
+	height: 400px;
+	width: 300px;
+}
+
 .container-cust {
 	margin-top: 1rem;
 }
@@ -24,4 +29,9 @@
 .form-label-group input {
 	height: auto;
 	border-radius: 2rem;
+}
+
+.pre-scrollable {
+	max-height: 150px;
+	overflow-y: scroll;
 }
